# Scope-DeepLiveCam

./: .gitignore  README.md  pyproject.toml
scope_deeplivecam/: plugin.py
scope_deeplivecam/pipelines/: pipeline.py  schema.py
